metadata/force-app/main/default/objects/CustomName_pKjoO__c/CustomName_pKjoO__c.object-meta.xml
<CustomObject>
    <description>Description_wkxaD</description>
    <label>CustomLabel_WzcNo</label>
    <nameField>
        <label>CustomLabel_WzcNo</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_WzcNos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>