metadata/force-app/main/default/objects/CustomName_pKjoO__c/fields/CustomField_dyqdl__c.field-meta.xml
<CustomField>
    <fullName>CustomField_dyqdl__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldDbTrC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>