metadata/force-app/main/default/objects/CustomName_pKjoO__c/fields/CustomField_XcDSQ__c.field-meta.xml
<CustomField>
    <fullName>CustomField_XcDSQ__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldvuUPK</label>
    <length>255</length>
    <type>Text</type>
</CustomField>